tests/check/outputs/parsingTests.mg.out
<unknown location>: Parse error: tests/check/inputs/parsingTests.mg:2:1:
  |
2 | <empty line>
  | ^
unexpected end of input
expecting '_' or alphanumeric character

